# eta-doromochi

./: LICENSE  README.md  doromochi.cabal  install.sh  instant_run.sh
app/: Main.hs
images/: LICENSE.md
resources/: prefs-interval
resources/sounds/: LICENSE.md
src/: JavaFX.hs
src/Control/Monad/: Doromochi.hs
src/Doromochi/: DoromochiApp.hs  DoromochiPane.hs  FilePath.hs  JavaFX.hs  Main.hs  Types.hs
src/Doromochi/View/: DoromochiPane.hs  LicensePane.hs  PomodoroPane.hs  PreferencesPane.hs
src/Java/: Doromochi.hs
src/JavaFX/: Core.hs  Methods.hs  Types.hs
