name:                doromochi
version:             0.1.0.0
synopsis:            A pomodoro app with eta and javafx
description:         A pomodoro app with eta and javafx
homepage:            https://github.com/aiya000/eta-doromochi
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >=4.8 && < 4.9
  exposed-modules:     Doromochi.Main
  default-language:    Haskell2010

executable doromochi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.8 && < 4.9
                     , doromochi
  default-language:    Haskell2010
